--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "4.4.1_backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "knex_migrate_clients": "knex migrate:make clients",
+    "knex_migrate_clients":"knex migrate:make clients",
     "knex_latest":"knex migrate:latest"
   },
   "keywords": [],
