--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "knex_migrate_clients":"knex migrate:make clients",
+    "knex_migrate_products":"knex migrate:make products",
     "knex_latest":"knex migrate:latest"
   },
   "keywords": [],
